Add LocalStorageService to store and retrieve user state

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@components/*": ["./components/*"],
       "@contexts/*": ["./contexts/*"],
       "@models/*": ["./models/*"],
+      "@services/*": ["./services/*"],
       "@views/*": ["./views/*"]
     }
   },
