--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,6 +20,7 @@
       "@assets/*": ["./assets/*"],
       "@components/*": ["./components/*"],
       "@contexts/*": ["./contexts/*"],
+      "@hooks/*": ["./hooks/*"],
       "@models/*": ["./models/*"],
       "@services/*": ["./services/*"],
       "@views/*": ["./views/*"]
