Config Jest and Testing Library

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
     }
   },
   "include": [".eslintrc.cjs", "src"],
+  "exclude": ["./src/__tests__/**", "./src/__mocks__/**", "./src/test-utils"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
